src/test/parse-fail/range_inclusive.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Make sure that inclusive ranges with no end point don't parse.

#![feature(inclusive_range_syntax, inclusive_range)]

pub fn main() {
    for _ in 1... {}
} //~ ERROR expected one of

